--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-module.exports = (manArr, engArr, internArr)=> {
-console.log(manArr, engArr, internArr);
-return `
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,11 +11,19 @@ return `
     <h1 class="col-12 text-center bg-danger text-light p-5">My Team</h1>
 </header>
 <body>
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+          <li class="list-group-item">A second item</li>
+          <li class="list-group-item">A third item</li>
+        </ul>
+      </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
-`;
-}
-
-//FOR THE MORROW
