--- a/index.html
+++ b/index.html
@@ -5,25 +5,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="./src/style.css">
     <title>Document</title>
 </head>
 <header>
-    <h1 class="col-12 text-center bg-danger text-light p-5">My Team</h1>
+    <h1 class="col-12 text-center headerBg text-light p-5 shadow">My Team</h1>
 </header>
 <body>
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    
+    <section>
+        <div class="container  mt-5 p-2">
+            <div class="row">
+                <div class="col-4 col-mb-4">
+                    <div class="card shadow " style="width: 18rem;">
+                        <div class="card-header cardBg text-light p-3">
+                        <h2>Jared</h2>
+                        <h3><span class="iconify" data-icon="ic:baseline-engineering"></span> Engineer</h3> 
+                        </div>
+                        <div class="cardWhiteSpace card-body pb-5 pt-5 p-3">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item p-2">An item</li>
+                                <li class="list-group-item p-2">A second item</li>
+                                <li class="list-group-item p-2">A third item</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-4 col-mb-4">
+                            <div class="card shadow" style="width: 18rem;">
+                                <div class="card-header cardBg text-light p-3">
+                                <h2>Jared</h2>
+                                <h3><span class="iconify " data-icon="ic:baseline-school"></span> ${intern.name}</h3> 
+                                </div>
+                                <div class="cardWhiteSpace card-body pb-5 pt-5 p-3">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item p-2">An item</li>
+                                        <li class="list-group-item p-2"><a href="mailto:collinhallett@gmail.com">link</a></li>
+                                        <li class="list-group-item p-2">A third item</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4 col-mb-4">
+                            <div class="card shadow " style="width: 18rem;">
+                                <div class="card-header cardBg text-light p-3">
+                                <h2>${name}</h2>
+                                <h3><span class="iconify" data-icon="ic:baseline-engineering"></span> ${role} </h3> 
+                                </div>
+                                <div class="cardWhiteSpace card-body pb-5 pt-5 p-3">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item p-2">ID: ${id} </li>
+                                        <li class="list-group-item p-2">Email: <a href="mailto:${email}"> ${email}</a></li>
+                                        <li class="list-group-item p-2">GitHub: <a href="github.com/${github}"> ${github} </a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                <div class="col-4 col-mb-4">
+                    <div class="card shadow " style="width: 18rem;">
+                        <div class="card-header cardBg text-light p-3">
+                        <h2>Jared</h2>
+                        <h3><span class="iconify" data-icon="ic:baseline-engineering"></span> Engineer</h3> 
+                        </div>
+                        <div class="cardWhiteSpace card-body pb-5 pt-5 p-3">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item p-2">An item</li>
+                                <li class="list-group-item p-2">A second item</li>
+                                <li class="list-group-item p-2">A third item</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
-        </ul>
-      </div>
+    </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 </body>
 </html>
